oldest supported upgrading version, MediaWiki 1.35.

Some specific notes for MediaWiki 1.44 upgrades are below:

* …

For notes on 1.43.x and older releases, see HISTORY.

=== Configuration changes for system administrators in 1.44 ===

* …

==== New configuration ====

* …

==== Changed configuration ====

* …

==== Removed configuration ====

* …

=== New user-facing features in 1.44 ===

* …

=== New features for sysadmins in 1.44 ===

* …

=== New developer features in 1.44 ===

* The AuthenticationAttemptThrottled hook was added.
* …

=== External library changes in 1.44 ===

==== New external libraries ====

* …

===== New development-only external libraries =====

* …

==== Changed external libraries ====

* …

===== Changed development-only external libraries =====

* …

==== Removed external libraries ====

* …

=== Bug fixes in 1.44 ===

* …

=== Action API changes in 1.44 ===

* …

=== Action API internal changes in 1.44 ===

* …

=== Languages updated in 1.44 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.44 ===

* …

=== Deprecations in 1.44 ===

* …

=== Other changes in 1.44 ===

* …

== Compatibility ==

MediaWiki 1.44 requires PHP 8.1.0 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):
