@@ -5913,16 +5913,6 @@ class MainConfigSchema {
 	];
 
 	/**
-	 * Use the main stash instead of the module_deps table for indirect dependency tracking
-	 *
-	 * @deprecated since 1.43; This will be removed in 1.44
-	 * @since 1.35
-	 */
-	public const ResourceLoaderUseObjectCacheForDeps = [
-		'default' => true,
-	];
-
-	/**
 	 * The default debug mode (on/off) for of ResourceLoader requests.
 	 *
 	 * This will still be overridden when the debug URL parameter is used.
